fix input overflow css

--- a/frontend/src/components/editableImageInput.module.scss
+++ b/frontend/src/components/editableImageInput.module.scss
@@ -15,12 +15,21 @@
   align-items: center;
 }
 
+.fileInput {
+  width: 60%;
+}
+
 .nonUpdatedData {
   width: 100%;
   height: 32px;
   font-family: theme.$font-family-primary;
   font-size: theme.$font-size-medium;
   border-bottom: theme.$border-regular-component;
+
+  @include media.mobile {
+    justify-content: space-between;
+    max-width: 100%;
+  }
 }
 
 .property {
